--- a/form.html
+++ b/form.html
@@ -23,7 +23,7 @@
         </div>
         <div class="form-control">
             <label>Email</label>
-            <input type="email" placeholder="Enter your email" id="email">
+            <input type="password" placeholder="Enter your email" id="email">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Email incorrect</small>
@@ -55,6 +55,7 @@
             <i class="fas fa-exclamation-circle"></i>
             <small>Age can not be blank</small>
         </div>
+        <button>Submit</button>
     </form>
     </div>
     
