--- a/form.html
+++ b/form.html
@@ -14,14 +14,14 @@
             <h2> Create an Account</h2>
         </div>
         <form class="form" id="form"  action="">
-        <div class="form-control">
+        <div class="form-control sucess">
             <label>Name</label>
             <input type="text" placeholder="Enter your name" id="username">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Name can not be blank</small>
         </div>
-        <div class="form-control">
+        <div class="form-control error">
             <label>Email</label>
             <input type="password" placeholder="Enter your email" id="email">
             <i class="fas fa-check-circle"></i>
@@ -58,6 +58,6 @@
         <button>Submit</button>
     </form>
     </div>
-    
+    <script src="form.js"></script>
 </body>
 </html>
