--- a/form.html
+++ b/form.html
@@ -14,46 +14,40 @@
             <h2> Create an Account</h2>
         </div>
         <form class="form" id="form"  action="">
-        <div class="form-control sucess">
+        <div class="form-control success" >
             <label>Name</label>
             <input type="text" placeholder="Enter your name" id="username">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Name can not be blank</small>
         </div>
-        <div class="form-control error">
+        <div class="form-control error ">
             <label>Email</label>
-            <input type="password" placeholder="Enter your email" id="email">
+            <input type="email" placeholder="Enter your email" id="email">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
-            <small>Email incorrect</small>
+            <small>Error message</small>
         </div>
         <div class="form-control">
             <label>Telephone.no</label>
             <input type="number" placeholder="Enter your phone number" id="ph-number">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
-            <small>Name can not be blank</small>
+            <small>Error message</small>
         </div>
         <div class="form-control">
             <label>Password</label>
-            <input type="text" placeholder="Enter your password" id="password">
+            <input type="password" placeholder="Enter your password" id="password">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
-            <small>Password must be;
-                <ul>
-                    <li>minimum 8</li>
-                    <li>no space</li>
-                    <li>password must be a combination of letters and numbers</li>
-                </ul>
-            </small>
+            <small>Error message</small>
         </div>
         <div class="form-control">
             <label>Age</label>
             <input type="text" placeholder="Enter your age" id="age">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
-            <small>Age can not be blank</small>
+            <small>Error message</small>
         </div>
         <button>Submit</button>
     </form>
