--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/88facd8bd0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="form.css">
+    <script defer  src="form.js"></script>
     <title>Form Validation</title>
 </head>
 <body>
@@ -14,14 +15,14 @@
             <h2> Create an Account</h2>
         </div>
         <form class="form" id="form"  action="">
-        <div class="form-control success" >
-            <label>Name</label>
+        <div class="form-control " >
+            <label>Username</label>
             <input type="text" placeholder="Enter your name" id="username">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
-            <small>Name can not be blank</small>
+            <small>Error message</small>
         </div>
-        <div class="form-control error ">
+        <div class="form-control ">
             <label>Email</label>
             <input type="email" placeholder="Enter your email" id="email">
             <i class="fas fa-check-circle"></i>
@@ -49,9 +50,10 @@
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
         </div>
-        <button>Submit</button>
+        <button type="submit">Submit</button>
+        
     </form>
     </div>
-    <script src="form.js"></script>
+   
 </body>
 </html>
