--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
         <div class="header">
             <h2> Create an Account</h2>
         </div>
-        <form class="form" id="form"  action="">
+        <form class="form" id="form"  action="" onsubmit="checkInputs()">
         <div class="form-control " >
             <label>Username</label>
             <input type="text" placeholder="Enter your name" id="username">
