--- a/vform.html
+++ b/vform.html
@@ -13,41 +13,42 @@
     <h1>Contact Us</h1>
     <p>We love to hear from you! Send us a message.</p>
 </div>
-<form action="">
+<form action="" onsubmit="return Validate()" >
     <div class="form-group">
         <label for="name">Name</label>
-        <input type="text"name="name" class="" placeholder="Enter your name..">
-        <div class="error-hint hidden">Name can not be blank.</div>
+        <input type="text"name="name" class="name" placeholder="Enter your name..">
+        <div class="error_name hidden">Name can not be blank.</div>
     </div>
 
     <div class="form-group">
         <label for="email">Email</label>
-        <input type="text"name="email" class="" placeholder="Enter your email..">
-        <div class="error-hint hidden">Email is invalid.</div>
+        <input type="text"name="email" class="email" placeholder="Enter your email..">
+        <div class="error_email hidden">Email is invalid.</div>
     </div>
 
     <div class="form-group">
-        <label for="name">Phone</label>
-        <input type="text"name="name" class="" placeholder="Enter your phone number..">
-        <div class="error-hint hidden">Name can not be blank.</div>
+        <label for="phone">Phone</label>
+        <input type="text"name="phone" class="phone" placeholder="Enter your phone number..">
+        <div class="error_phone hidden">Name can not be blank.</div>
     </div>
 
     <div class="form-group">
         <label for="age">Age</label>
-        <input type="number"name="name" class="" placeholder="Enter your age..">
-        <div class="error-hint hidden">Name can not be blank.</div>
+        <input type="number"name="age" class="age" placeholder="Enter your age..">
+        <div class="error_age hidden">Name can not be blank.</div>
     </div>
 
     <div class="form-group">
         <label for="password">Password</label>
-        <input type="password"name="password" class="" placeholder="Password here..">
-        <div class="error-hint hidden">Name can not be blank.</div>
+        <input type="password"name="password" class="password" placeholder="Password here..">
+        <div class="error_password hidden">Name can not be blank.</div>
     </div>
     <hr />
-    <button type="submit">Submit</button>
+    <input type="submit" value="submit" id="btn">
 </form>
 <div class="thank-you hidden">"Thank you for your message. We will get back to you as soon as possible."</div>
 
-<script  src="vform.js"></script>
+<script  src="vform1.js"></script>
 </body>
 </html>
+
