--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ var email = document.forms["vform"]["email"];
 var age = document.forms["vform"]["age"];
 var password = document.forms["vform"]["password"];
 var password_confirmation = document.forms["vform"]["password_confirmation"];
-const eValidation = /^([a-zA-Z0-9\._-]+)@([a-zA-Z0-9\._-]).([a-z]{2,})$/;
+var eValidation =  /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
 
 //Error display objects
 
@@ -93,10 +93,10 @@ function Validate(){
         return false;
     }
     //email
-    if(email.value ==='' || email.value==!eValidation){
+    if(email.value ===''){
         email.style.border = "3px solid red";
         document.getElementById('email_div').style.color='black';
-        email_error.textContent = "Email is required";
+        email_error.textContent = " Valid email is required";
         email.focus();
         return false;
     }
@@ -125,6 +125,7 @@ function Validate(){
         password.focus();
         return false;
     }
+    
     /*if(password.value != password_confirmation.value){
         password.style.border ='3px solid red';
         document.getElementById('password_div').style.color='black';
@@ -155,7 +156,7 @@ function usernameVerify(){
 }
 
 function emailVerify(value){
-     if (email !=""){
+     if (eValidation.test(email.value)){
         email.style.border = "3px solid #5e6e"
         email_error.innerHTML="";
         return true;
