--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="container">
-        <form method="post" action="home.html" onsubmit="return Validate()"name="vform" >
+        <form method="get" action="home.html" onsubmit="return Validate()"name="vform" >
             <h1>Create Account</h1>
             <div id="username_div">
                 <label for="username">Username</label>
@@ -51,7 +51,7 @@
         </form>
     </div>
 
-    <script>
+   <!---- <script>
         //Getting all input text objects
 
 var username = document.forms["vform"]["username"];
@@ -148,7 +148,7 @@ function Validate(){
 //Event handler function
 function usernameVerify(){
     if (username !=""){
-        username.style.border = "3px solid #5e6e"
+        username.style.border = "3px solid #2db300"
         name_error.innerHTML="";
         return true;
     }
@@ -157,7 +157,7 @@ function usernameVerify(){
 
 function emailVerify(value){
      if (eValidation.test(email.value)){
-        email.style.border = "3px solid #5e6e"
+        email.style.border = "3px solid #2db300"
         email_error.innerHTML="";
         return true;
     }
@@ -166,7 +166,7 @@ function emailVerify(value){
 
 function ageVerify(){
     if (age !=""){
-        age.style.border = "3px solid #5e6e"
+        age.style.border = "3px solid #2db300"
         age_error.innerHTML="";
         return true;
     }
@@ -176,7 +176,7 @@ function ageVerify(){
 
 function passwordVerify(){
     if (password !="" || password.value.lenght >= 8){
-        password.style.border = "3px solid #5e6e"
+        password.style.border = "3px solid #2db300"
         password_error.innerHTML="";
         return true;
     }
@@ -185,21 +185,21 @@ function passwordVerify(){
 }
 function passwordVerify() {
   if (password.value != "") {
-  	password.style.border = "3px solid #5e6e";
-  	document.getElementById('pass_confirm_div').style.color = "#5e6e66";
-  	document.getElementById('password_div').style.color = "#5e6e66";
+  	password.style.border = "3px solid #2db300";
+  	document.getElementById('pass_confirm_div').style.color = "#ffff4d";
+  	document.getElementById('password_div').style.color = "#ffff4d";
   	password_error.innerHTML = "";
   	return true;
   }
   if (password.value === password_confirmation.value) {
   	password.style.border = "3px solid #5e6e";
-  	document.getElementById('pass_confirm_div').style.color = "#5e6e66";
+  	document.getElementById('pass_confirm_div').style.color = "#ffff4d";
   	password_error.innerHTML = "";
   	return true;
   }
   if (password.value.lenght >= 8){
     password.style.border = "3px solid #5e6e";
-  	document.getElementById('password_div').style.color = "#5e6e66";
+  	document.getElementById('password_div').style.color = "#ffff4d";
   	password_error.innerHTML = "";
   	return true;
 
@@ -208,7 +208,8 @@ function passwordVerify() {
 
 
 
-    </script>
+    </script> -->
+    <script src="index.js"></script>
 
    
 </body>
